tests/machine/x/pl/if_then_else.pl
% Generated by Mochi compiler v0.10.26 on 2025-07-16T17:40:32Z
:- style_check(-singleton).
:- initialization(main, main).
main :-
    X is 12,
    ((X > 10) -> _V0 = "yes" ; _V0 = "no"),
    Msg = _V0,
    _V1 is Msg,
    writeln(_V1),
    true.
